update swagger docs: API penerbangan
