# app/controllers/flightController.js
@@ -1,8 +1,8 @@
-const { flight } = require('../models');
+const { Flight } = require('../models');
 
-const getFlght = async (req, res) => {
+const getFlight = async (req, res) => {
   try {
-    const dataFlight = await flight.findAll();
+    const dataFlight = await Flight.findAll();
     res.status(200).json({
       dataFlight,
     });
@@ -12,11 +12,48 @@ const getFlght = async (req, res) => {
     });
   }
 };
-const addFlight = (req, res) => { };
+
+const getFlightById = (req, res) => { };
+
+const addFlight = async (req, res) => {
+  try {
+    const {
+      flightNumber,
+      airplaneCode,
+      flightFrom,
+      flightTo,
+      departureTime,
+      arrivalTime,
+      totalTransit,
+      transitPoint,
+      transitDuration
+    } = req.body;
+
+    const newFlight = await Flight.create({
+      flightNumber,
+      airplaneCode,
+      flightFrom,
+      flightTo,
+      departureTime,
+      arrivalTime,
+      totalTransit,
+      transitPoint,
+      transitDuration
+    });
+  } catch (error) {
+    res.status(error.statusCode || 500).json({
+      message: error.message,
+    });
+  }
+};
+
 const updateflight = (req, res) => { };
+
 const deleteFlight = (req, res) => { };
+
 module.exports = {
-  getFlght,
+  getFlight,
+  getFlightById,
   addFlight,
   updateflight,
   deleteFlight,
